--- a/force-app/main/default/lwc/contactCreate/contactCreate.html
+++ b/force-app/main/default/lwc/contactCreate/contactCreate.html
@@ -1,3 +1,21 @@
 <template>
-    
+    <lightning-card title="Create a New Contact">
+        <div class="slds-m-around_medium">
+            <lightning-record-edit-form
+                object-api-name="Contact"
+                onsubmit={handleSubmit}
+                onsuccess={handleSuccess}
+                >
+                <lightning-messages></lightning-messages>
+                <lightning-input-field field-name="FirstName"></lightning-input-field>
+                <lightning-input-field field-name="LastName" required></lightning-input-field>
+                <lightning-input-field field-name="Email"></lightning-input-field>
+                <lightning-input-field field-name="Phone"></lightning-input-field>
+                <div class="slds-m-top_large">
+                    <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
+                    <lightning-button  label="Reset Fields" onclick={resetFields}></lightning-button>
+                </div>
+            </lightning-record-edit-form>
+        </div>
+    </lightning-card>
 </template>
