--- a/force-app/main/default/lwc/contactList/contactList.html
+++ b/force-app/main/default/lwc/contactList/contactList.html
@@ -1,3 +1,12 @@
 <template>
-
+    <lightning-card title="Contacts">
+        <template if:true={contacts.data}>
+              <lightning-datatable
+                    key-field="Id"
+                    data={contacts.data}
+                    columns={columns}
+                >
+                </lightning-datatable>
+        </template>
+    </lightning-card>
 </template>
